# biometrics

./: README.md  pyproject.toml  requirements.txt
last_q/: README.md
last_q/data/: augment_fp.py  data.py  enhanced_iris.py
last_q/models/: fp_net.py  fusion_net.py  grad.md  iris_net.py  model_from_pretrained.py  model_from_scratch.py  sep_nets.py
last_q/scripts/: data_augmentation.py  evaluate.py  fingerprints.py  fusion.py  iris.py  test_from_pretrained.py  test_from_scratch.py  train_from_pretrained.py  train_from_scratch.py  train_separately.py
last_q/src/: fingerprint_enhancer.py  iris_utils.py  utils.py
last_q/src/fprmodules/: __init__.py
last_q/src/fprmodules/enhancement/: __init__.py  frequest.py  image_enhance.py  ridge_filter.py  ridge_freq_2.py  ridge_orient.py  ridge_segment.py
last_q/src/fprmodules/minutiae_extraction/: __init__.py  extractMinutiae.py  getTerminationBifurcation.py  removeSpuriousMinutiae.py
last_q/src/fprmodules/utils/icp/: __init__.py  testicp.py
last_q/src/irismodules/: calculate_dist_mat_mmu2.py  enroll-casia1.py  enroll-mmu2.py  enroll-single.py  eval_casia1.py  eval_mmu2.py  eval_thres_mmu2.py  verify.py
last_q/src/irismodules/archive/: calculate_dist_mat_casia1.py  eval_thres_casia1.py  evaluate_mmu2.py
last_q/src/irismodules/fnc/: boundary.py  createAccount.py  encode.py  extractFeature.py  line.py  matching.py  normalize.py  segment.py
